--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .profile-image {
@@ -35,6 +38,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  align-content: right;
 }
 
 a {
@@ -44,5 +48,18 @@ a {
 }
 
 ul {
+  align-content: left;
   list-style-type: none;
+  flex: 1;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+}
+
+.right {
+  display: flex;
+  gap: 10px;
+  justify-content: right;
 }
