--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -2,9 +2,11 @@
 
 body {
   height: 100vh;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
 }
 
 img {
@@ -16,6 +18,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  font-weight: 100;
 }
 
 input {
@@ -25,3 +29,42 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+
+.footer {
+  background-color: #eeeeee;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  width: 100%;
+  height: 50px;
+  margin: 0;
+  min-width: 100%;
+  margin-left: -10px;
+  padding-inline: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: grey;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+}
+
+.content {
+  display: block;
+  text-align: center;
+  height: 100%;
+  margin-top: 200px;
+}
+
